<resources>

    <string name="config_name">FHEMswitch Configuration</string>
    <string name="widget_name">FHEMswitch</string>
    <string name="url_fhem_pl">URL FHEM webserver (optional)</string>
    <string name="url_fhem_js">URL FHEM node.js server</string>
    <string name="conn_pw">FHEM server password (optional)</string>
    <string name="ok">OK</string>
    <string name="switchicon">Lamp</string>
    <string name="save">Save</string>
    <string name="error_header">An error has occurred</string>
    <string name="getConfig">get FHEM units</string>

    <string name="switches">Switches</string>
    <string name="columns">Columns:</string>
    <string name="lightscenes">Scenarios</string>
    <string name="values">Values</string>
    <string name="values2">Values</string>
    <string name="sel">Sel</string>
    <string name="unit">Name - sort by drag &#038; drop</string>
    <string name="name">Displayed Name</string>
    <string name="header">Header</string>
    <string name="command">Command</string>
    <string name="noconn">No connection to FHEM server. Tip for reconnection attempt.</string>
    <string name="checkpw">Please check password</string>
    <string name="initruns">Initialising runs</string>
    <string name="urlerr">The typed URL is invalid</string>
    <string name="urlcheck">please check URL</string>
    <string name="fileerr">Error at saving configuration:</string>
    <string name="onlinecheck">is this device online</string>
	<string name="commands">Custom commands</string>
    <string name="commands2">FHEM command</string>
    <string name="newline">+</string>
    
    <string name="landscape">Layout Landscape</string>
    <string name="portrait">Layout Portrait</string>
    <string name="horizontal">horizontal</string>
    <string name="vertical">vertical</string>
    <string name="mixed">mixed</string>
    <string name="LAYOUT_HORIZONTAL">0</string>
    <string name="LAYOUT_VERTICAL">1</string>
    <string name="LAYOUT_MIXED">2</string>
 
    <string-array name="commands">
        <item>toggle</item>
        <item>on</item>
        <item>off</item>
    </string-array>

    <string-array name="colnum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>