<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- URL for node.js -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="57dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/urljs_label"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/url_fhem_js"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/urljs"
                android:layout_width="495dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <!-- URL for node.pl -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/urlpl_label"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/url_fhem_pl"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/urlpl"
                android:layout_width="495dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri" />
        </LinearLayout>

        <Button
            android:id="@+id/okconfig"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="180dp"
            android:background="@drawable/configbutton"
            android:text="@string/getConfig" />

        <!-- Block of switches -->

        <TextView
            android:id="@+id/switches_header1"
            android:layout_width="594dp"
            android:layout_height="wrap_content"
            android:background="#ff222222"
            android:gravity="center"
            android:text="@string/switches"
            android:textColor="#ffdddddd"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/switches_header2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:text="@string/sel"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:text="@string/unit"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:paddingLeft="12dp"
                android:text="@string/name"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:paddingLeft="12dp"
                android:text="@string/command"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/switches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Block of lightscenes -->

        <TextView
            android:id="@+id/lightscenes_header1"
            android:layout_width="594dp"
            android:layout_height="wrap_content"
            android:background="#ff222222"
            android:gravity="center"
            android:text="@string/lightscenes"
            android:textColor="#ffdddddd"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lightscenes_header2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:text="@string/sel"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:text="@string/unit"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:paddingLeft="12dp"
                android:text="@string/name"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:paddingLeft="12dp"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/lightscenes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Block of values -->

        <TextView
            android:id="@+id/values_header1"
            android:layout_width="594dp"
            android:layout_height="wrap_content"
            android:background="#ff222222"
            android:gravity="center"
            android:text="@string/values"
            android:textColor="#ffdddddd"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/values_header2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:text="@string/sel"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:text="@string/unit"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:paddingLeft="12dp"
                android:text="@string/name"
                android:textColor="#ffdddddd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="#ff555555"
                android:paddingLeft="12dp"
                android:textColor="#ffdddddd"
                android:text="@string/values2"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/okconfig2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/configbutton"
            android:text="@string/save"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>